<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_film"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_poster" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title"
            android:contentDescription="@string/gradient" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/text_title_style"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_durasi"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_durasi"
            style="@style/text_style"
            android:text="@string/durasi"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_score"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_score"
            style="@style/text_style"
            android:layout_marginBottom="16dp"
            android:text="@string/score"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>