<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_film"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_poster" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_title_style"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_film"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/text_style"
        android:text="@string/durasi"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@+id/img_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_score"
        style="@style/text_style"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@+id/tv_duration"
        app:layout_constraintStart_toEndOf="@+id/img_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />


</androidx.constraintlayout.widget.ConstraintLayout>